fix iconds align

--- a/ochag/sass/screen.sass
+++ b/ochag/sass/screen.sass
@@ -306,6 +306,7 @@ h2
     border-radius: 50%
     width: 148px
     height: 148px
+    display: inline-block
   &__title
     font-weight: bold
     font-size: 1.3em
